# ScreenlistQt

./: README.md
Screenlist/: CMakeLists.txt  GeneratorThread.cpp  GeneratorThread.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  ProcessingThread.cpp  ProcessingThread.h  ProfileList.cpp  ProfileList.h  Settings.cpp  Settings.h  TODO.txt  VdeoListModel.cpp  VdeoListModel.h  VideoItem.cpp  VideoItem.h  about.h  main.cpp  reset_settings.reg  resources.qrc  sl_error.cpp  sl_error.h  sl_generator.cpp  sl_generator.h  sl_interface.cpp  sl_interface.h  sl_options.cpp  sl_options.h  sl_profile.cpp  sl_profile.h  sl_video_file.cpp  sl_video_file.h
